--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -5,10 +5,13 @@ bounding_box:
     - 37.0883200000001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 82.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 90.9
@@ -28,7 +31,7 @@ capacity:
       source: EIA.gov
       value: 70.0
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 7317.1
     - datetime: '2021-03-01'
@@ -47,6 +50,9 @@ capacity:
       source: EIA.gov
       value: 2590.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 8189.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 9741.5
@@ -66,10 +72,13 @@ capacity:
       source: EIA.gov
       value: 13592.2
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1211.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1177.1
@@ -83,6 +92,9 @@ capacity:
       source: EIA.gov
       value: 1144.9
   hydro storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2070.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2262.0
@@ -93,10 +105,13 @@ capacity:
       source: EIA.gov
       value: 2454.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 7517.5
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 126.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 129.4
@@ -104,6 +119,15 @@ capacity:
       source: EIA.gov
       value: 128.1
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1070.3
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 1145.7
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 1194.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2200.4
@@ -192,11 +216,11 @@ capacity:
       source: EIA.gov
       value: 2164.6
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Duke Energy Carolinas
