--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 37.963081
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 23.5
@@ -12,6 +15,12 @@ capacity:
       source: EIA.gov
       value: 173.5
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 23.0
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 56.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 33.0
@@ -19,10 +28,13 @@ capacity:
       source: EIA.gov
       value: 34.1
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 1640.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4818.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 4854.6
@@ -51,10 +63,13 @@ capacity:
       source: EIA.gov
       value: 4591.3
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 296.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 296.0
@@ -65,7 +80,7 @@ capacity:
       source: EIA.gov
       value: 287.6
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 1626.0
     - datetime: '2022-01-01'
@@ -75,14 +90,23 @@ capacity:
       source: EIA.gov
       value: 1626.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 727.2
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 730.1
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 788.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 987.0
@@ -123,11 +147,11 @@ capacity:
       source: EIA.gov
       value: 1316.5
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 31.9
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 440.5
 comment: Los Angeles Department Of Water And Power
