--- a/config/zones/US-CENT-SPA.yaml
+++ b/config/zones/US-CENT-SPA.yaml
@@ -5,26 +5,29 @@ bounding_box:
     - 40.781817
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 261.0
   gas:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 32.8
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1497.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1287.6
@@ -41,18 +44,27 @@ capacity:
       source: EIA.gov
       value: 1364.6
   hydro storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 107.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 161.4
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 7.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 12.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 17.0
@@ -63,11 +75,11 @@ capacity:
       source: EIA.gov
       value: 119.5
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 499.0
 comment: Southwestern Power Administration
