--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -5,7 +5,7 @@ bounding_box:
     - 31.214009
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
     - datetime: '2021-12-01'
@@ -24,6 +24,12 @@ capacity:
       source: EIA.gov
       value: 50.1
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 387.8
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 397.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 255.2
@@ -37,10 +43,16 @@ capacity:
       source: EIA.gov
       value: 184.2
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2442.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1478.4
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 8766.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 10553.9
@@ -54,26 +66,35 @@ capacity:
       source: EIA.gov
       value: 11156.9
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 12.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1358.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1329.7
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 30.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 436.5
@@ -117,11 +138,14 @@ capacity:
       source: EIA.gov
       value: 1936.9
   unknown:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 21.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 18.8
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Duke Energy Florida Inc
