--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 31.33017
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 24.0
@@ -15,6 +18,9 @@ capacity:
       source: EIA.gov
       value: 493.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 531.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 620.8
@@ -34,10 +40,16 @@ capacity:
       source: EIA.gov
       value: 535.8
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 395.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 21336.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 23743.6
@@ -57,22 +69,25 @@ capacity:
       source: EIA.gov
       value: 28215.1
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 43.5
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 3797.2
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 3846.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 274.5
@@ -86,6 +101,9 @@ capacity:
       source: EIA.gov
       value: 189.8
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 262.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2275.3
@@ -135,11 +153,11 @@ capacity:
       source: EIA.gov
       value: 8086.3
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Florida Power & Light Company
