--- a/config/zones/US-FLA-SEC.yaml
+++ b/config/zones/US-FLA-SEC.yaml
@@ -5,14 +5,20 @@ bounding_box:
     - 31.2115600000001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 17.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.6
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1471.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1429.2
@@ -20,6 +26,9 @@ capacity:
       source: EIA.gov
       value: 714.6
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 897.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 853.3
@@ -27,38 +36,38 @@ capacity:
       source: EIA.gov
       value: 2036.5
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   solar:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
     - datetime: '2023-09-01'
       source: EIA.gov
       value: 74.5
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Seminole Electric Cooperative
