--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -5,7 +5,7 @@ bounding_box:
     - 28.9295718550001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
     - datetime: '2022-01-01'
@@ -21,10 +21,13 @@ capacity:
       source: EIA.gov
       value: 107.6
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 69.1
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2015.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1124.4
@@ -41,6 +44,9 @@ capacity:
       source: EIA.gov
       value: 486.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4916.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 5535.7
@@ -66,29 +72,35 @@ capacity:
       source: EIA.gov
       value: 6123.9
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 133.4
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 10.3
+    - datetime: '2017-02-01'
+      source: EIA.gov
+      value: 29.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 661.6
@@ -117,6 +129,9 @@ capacity:
       source: EIA.gov
       value: 1356.4
   unknown:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 371.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 325.3
@@ -124,7 +139,7 @@ capacity:
       source: EIA.gov
       value: 317.8
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Tampa Electric Company
