--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 47.9598300000001
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 19.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 128.6
@@ -114,6 +117,9 @@ capacity:
       source: EIA.gov
       value: 403.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1539.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1386.8
@@ -136,6 +142,9 @@ capacity:
       source: EIA.gov
       value: 1245.9
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2083.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 859.2
@@ -143,6 +152,9 @@ capacity:
       source: EIA.gov
       value: 459.2
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 16494.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 20033.5
@@ -201,10 +213,13 @@ capacity:
       source: EIA.gov
       value: 16699.0
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1902.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1894.0
@@ -224,6 +239,9 @@ capacity:
       source: EIA.gov
       value: 1896.1
   hydro storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1564.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1799.0
@@ -237,6 +255,9 @@ capacity:
       source: EIA.gov
       value: 1865.0
   nuclear:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4074.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 3404.9
@@ -244,6 +265,9 @@ capacity:
       source: EIA.gov
       value: 3501.9
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 6474.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 5724.6
@@ -281,6 +305,15 @@ capacity:
       source: EIA.gov
       value: 5695.2
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 616.5
+    - datetime: '2017-02-01'
+      source: EIA.gov
+      value: 619.0
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 623.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1608.7
@@ -432,10 +465,19 @@ capacity:
       source: EIA.gov
       value: 3419.2
   unknown:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 300.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1313.8
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 1315.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1498.4
