--- a/config/zones/US-NW-IPCO.yaml
+++ b/config/zones/US-NW-IPCO.yaml
@@ -5,7 +5,7 @@ bounding_box:
     - 47.1707900000001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
     - datetime: '2025-02-01'
@@ -15,6 +15,9 @@ capacity:
       source: EIA.gov
       value: 227.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 24.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 22.2
@@ -28,6 +31,9 @@ capacity:
       source: EIA.gov
       value: 23.5
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 10.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 6.2
@@ -35,6 +41,9 @@ capacity:
       source: EIA.gov
       value: 0.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 770.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 774.4
@@ -45,10 +54,13 @@ capacity:
       source: EIA.gov
       value: 779.1
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 33.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1894.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1855.1
@@ -71,18 +83,24 @@ capacity:
       source: EIA.gov
       value: 2023.1
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 169.5
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 269.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 318.3
@@ -102,11 +120,14 @@ capacity:
       source: EIA.gov
       value: 781.3
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 15.9
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 666.8
+    - datetime: '2017-03-01'
       source: EIA.gov
       value: 716.8
     - datetime: '2022-01-01'
