--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -5,14 +5,17 @@ bounding_box:
     - 49.5011000000001
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2437.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1814.7
@@ -20,17 +23,20 @@ capacity:
       source: EIA.gov
       value: 1810.7
   gas:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 258.0
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 465.0
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 645.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 669.0
@@ -56,18 +62,21 @@ capacity:
       source: EIA.gov
       value: 701.2
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 68.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 17.0
@@ -84,10 +93,13 @@ capacity:
       source: EIA.gov
       value: 181.0
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 258.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 452.9
