--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 35.5013030000001
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2.2
@@ -27,6 +30,12 @@ capacity:
       source: EIA.gov
       value: 148.7
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1758.8
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 1813.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1917.5
@@ -55,6 +64,9 @@ capacity:
       source: EIA.gov
       value: 1878.0
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 17522.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 15029.7
@@ -65,6 +77,9 @@ capacity:
       source: EIA.gov
       value: 12234.7
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 35594.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 35949.5
@@ -105,10 +120,13 @@ capacity:
       source: EIA.gov
       value: 36251.2
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 3225.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 3309.4
@@ -116,10 +134,16 @@ capacity:
       source: EIA.gov
       value: 3317.6
   hydro storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1056.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1306.6
   nuclear:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 5818.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 6054.4
@@ -130,6 +154,9 @@ capacity:
       source: EIA.gov
       value: 8282.4
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1132.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1188.9
@@ -152,6 +179,12 @@ capacity:
       source: EIA.gov
       value: 1346.1
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 957.1
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 967.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2639.2
@@ -246,14 +279,14 @@ capacity:
       source: EIA.gov
       value: 5745.9
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 45.0
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
 comment: Southern Company Services, Inc. - Trans
