--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 36.784585904
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2.0
@@ -33,10 +36,16 @@ capacity:
       source: EIA.gov
       value: 1743.8
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 6.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 30.4
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2476.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2062.1
@@ -44,6 +53,9 @@ capacity:
       source: EIA.gov
       value: 1636.2
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2124.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2714.6
@@ -57,26 +69,32 @@ capacity:
       source: EIA.gov
       value: 2602.5
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 123.8
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 694.9
+    - datetime: '2017-02-01'
+      source: EIA.gov
+      value: 734.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 772.0
@@ -108,11 +126,11 @@ capacity:
       source: EIA.gov
       value: 2189.3
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 174.3
     - datetime: '2023-05-01'
