--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 38.30081076184365
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 2.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.8
@@ -27,7 +30,7 @@ capacity:
       source: EIA.gov
       value: 638.0
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 14.6
     - datetime: '2022-01-01'
@@ -40,6 +43,9 @@ capacity:
       source: EIA.gov
       value: 3.3
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1848.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 924.0
@@ -50,6 +56,9 @@ capacity:
       source: EIA.gov
       value: 0.0
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 1742.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1584.9
@@ -60,22 +69,28 @@ capacity:
       source: EIA.gov
       value: 1733.8
   geothermal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 19.2
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 150.0
@@ -83,6 +98,9 @@ capacity:
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 151.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 369.5
@@ -129,10 +147,16 @@ capacity:
       source: EIA.gov
       value: 1784.0
   unknown:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.1
   wind:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 496.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1065.8
