--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -5,7 +5,10 @@ bounding_box:
     - 36.710648233
 capacity:
   battery storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 10.0
+    - datetime: '2017-04-01'
       source: EIA.gov
       value: 20.0
     - datetime: '2021-04-01'
@@ -15,14 +18,17 @@ capacity:
       source: EIA.gov
       value: 70.0
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 1765.8
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 941.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1530.7
@@ -30,26 +36,35 @@ capacity:
       source: EIA.gov
       value: 1530.2
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 258.4
+    - datetime: '2017-03-01'
+      source: EIA.gov
+      value: 262.8
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 264.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 328.9
@@ -66,11 +81,11 @@ capacity:
       source: EIA.gov
       value: 495.0
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 30.0
     - datetime: '2021-05-01'
