--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -5,6 +5,9 @@ bounding_box:
     - 38.101846827
 capacity:
   battery storage:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 0.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1.0
@@ -15,6 +18,9 @@ capacity:
       source: EIA.gov
       value: 101.0
   biomass:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 286.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 284.9
@@ -34,6 +40,12 @@ capacity:
       source: EIA.gov
       value: 213.3
   coal:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 12642.1
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 11234.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 8593.9
@@ -41,6 +53,12 @@ capacity:
       source: EIA.gov
       value: 7643.9
   gas:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 14674.0
+    - datetime: '2017-04-01'
+      source: EIA.gov
+      value: 15834.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 17067.4
@@ -60,10 +78,13 @@ capacity:
       source: EIA.gov
       value: 17906.6
   geothermal:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 4866.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 4846.8
@@ -71,10 +92,13 @@ capacity:
       source: EIA.gov
       value: 4871.8
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 1808.6
   nuclear:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 8474.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 8548.3
@@ -82,13 +106,16 @@ capacity:
       source: EIA.gov
       value: 8834.8
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 57.0
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 677.8
   solar:
+    - datetime: '2017-01-01'
+      source: EIA.gov
+      value: 150.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 292.8
@@ -147,11 +174,11 @@ capacity:
       source: EIA.gov
       value: 1508.8
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2021-01-01'
+    - datetime: '2017-01-01'
       source: EIA.gov
       value: 28.8
     - datetime: '2025-03-01'
